--- a/RUSHE/app/src/main/res/layout/activity_login.xml
+++ b/RUSHE/app/src/main/res/layout/activity_login.xml
@@ -5,11 +5,11 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/colorPrimaryDark"
+    android:paddingBottom="10dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="10dp"
+    android:background="@color/colorPrimary"
     tools:context="com.example.rushpe.rushe.LoginActivity">
     android:weightSum="1"
 
@@ -39,7 +39,9 @@
         android:layout_below="@+id/imageView"
         android:layout_alignParentLeft="true"
 
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
 
         <LinearLayout
             android:id="@+id/email_login_form"
@@ -82,17 +84,36 @@
                     android:singleLine="true"
                     android:textColorLink="@android:color/black" />
 
-            </android.support.design.widget.TextInputLayout>
 
-            <Button
-                android:id="@+id/email_sign_in_button"
-                style="?android:textAppearanceSmall"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/action_sign_in"
-                android:textStyle="bold" />
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" >
+
+
+                <Button
+                    android:text="Register"
+                    android:layout_height="match_parent"
+                    android:id="@+id/goRegisterActivity"
+                    android:layout_weight="1"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_width="190dp" />
+
+                        <Button
+                            android:text="Login"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/goMainMenuActivity"
+                            android:layout_weight="1"
+                            android:layout_alignParentTop="true"
+                            android:layout_alignParentRight="true"
+                            android:layout_alignParentEnd="true"
+                            android:layout_width="190dp" />
+
+                    </RelativeLayout>
+
+            </android.support.design.widget.TextInputLayout>
 
         </LinearLayout>
     </ScrollView>
+
 </RelativeLayout>
