--- a/RUSHE/app/src/main/res/values/colors.xml
+++ b/RUSHE/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ca1228</color>
+    <color name="colorPrimary">#b1091f</color>
     <color name="colorPrimaryDark">#b1091f</color>
     <color name="colorAccent">#f7f0f2</color>
 </resources>
